# sec-data-core

./: .gitignore  2025_GAAP_Taxonomy_Small.ods  2025_GAAP_Taxonomy_Small_Calculation.parquet  2025_GAAP_Taxonomy_Small_Presentation.parquet  CLAUDE.md  pyproject.toml
checks/: check_periods.py
db_reduction/: build_test_dbs.py  mart_loader.py  verify_mart.py
sec_core/: __init__.py  db_loader.py  paths.py  sic.py  taxonomy_loader.py
viewer/: app.py  restart.sh  restart_test.sh
