[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-core"
version = "0.1.0"
description = "Shared SEC XBRL data access layer (DB, taxonomy, paths)"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "odfpy",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sec_core*"]
